дополнено описание _shame.scss файла

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -47,7 +47,7 @@
 @use 'themes';
 
 /**
- * ! Файл shame содержит позор любого программиста и верстальщика.
+ * ! Файл _shame.scss содержит позор любого программиста и верстальщика.
  * # Хаки, !important и т.п. позорище, всё то, что стыдно показывать другим,
  * # всё то, за что вас могут побить.
  * ! Подлежит обязательному очищению, желательно огнём.
