изменено название шрифта на FireNight

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,5 +9,5 @@ html {
 
 // * шрифты заголовков
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Firenight', sans-serif;
+	font-family: 'FireNight', sans-serif;
 }
