--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -10,10 +10,10 @@ html {
 	line-height: 1.5;
 }
 
-// * шрифты заголовков
+// * заголовки
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'FireNight', sans-serif;
-	font-weight: 700;
+	font-weight: 400;
 }
 h1 {
 	font-size: 2.5rem; // 40px
