--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -16,7 +16,12 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 }
 h1 {
-	font-size: 2.5rem; // 40px
+	@media (width < 60rem) {
+		font-size: 2.625rem; // 42px
+	}
+	@media (width >= 60rem) {
+		font-size: 2.625rem; // 42px
+	}
 }
 
 h2 {
@@ -37,4 +42,10 @@ h5 {
 
 h6 {
 	font-size: 1rem; // 16px
+}
+
+p {
+	* + & {
+		margin-block-start: 1.5em;
+	}
 }
